add DEPRECATED tag to xmobarrc

--- a/xmobar/.xmobarrc
+++ b/xmobar/.xmobarrc
@@ -1,3 +1,7 @@
+-- DEPRECATED
+-- DEPRECATED
+-- DEPRECATED
+
 -- from http://beginners-guide-to-xmonad.readthedocs.io/configure_xmobar.html
 
 -- Config { font = "xft:Fiery Turk-6"
