--- a/xmonad/.xsessionrc
+++ b/xmonad/.xsessionrc
@@ -69,6 +69,7 @@ sleep 4 && trayer --edge top --align right \
     &
 
 # start power manager. do it late so trayer is running when it starts (if you enable icon in xfce4-power-manager-settings)
+# TODO: would be better as a service
 sleep 6 && xfce4-power-manager &
 
 exec xmonad
