--- a/redshift/.config/redshift.conf
+++ b/redshift/.config/redshift.conf
@@ -3,7 +3,9 @@
 [redshift]
 ; Set the day and night screen temperatures
 temp-day=6000
-temp-night=3500
+; used on debian 9
+;temp-night=3500
+temp-night=5500
 
 ; Enable/Disable a smooth transition between day and night
 ; 0 will cause a direct change from day to night screen temperature.
