--- a/redshift/.config/redshift.conf
+++ b/redshift/.config/redshift.conf
@@ -2,7 +2,7 @@
 ; Global settings for redshift
 [redshift]
 ; Set the day and night screen temperatures
-temp-day=6000
+temp-day=6500
 ; used on debian 9
 ;temp-night=3500
 temp-night=5500
@@ -21,11 +21,12 @@ transition=1
 ; Set the screen gamma (for all colors, or each color channel
 ; individually)
 ;gamma=0.8
-gamma=0.8:0.7:0.8
+;gamma=0.8:0.7:0.8
 ; This can also be set individually for day and night since
 ; version 1.10.
 ;gamma-day=0.8:0.7:0.8
 ;gamma-night=0.6
+gamma-night=0.8:0.7:0.8
 
 ; Set the location-provider: 'geoclue', 'geoclue2', 'manual'
 ; type 'redshift -l list' to see possible values.
