--- a/redshift/.config/redshift.conf
+++ b/redshift/.config/redshift.conf
@@ -26,7 +26,10 @@ transition=1
 ; version 1.10.
 ;gamma-day=0.8:0.7:0.8
 ;gamma-night=0.6
-gamma-night=0.8:0.7:0.8
+;gamma-night=0.9:0.8:0.9
+; set gamma to 1 always to disable gamma adjustments (too dark for most rooms)
+gamma-day=1:1:1
+gamma-night=1:1:1
 
 ; Set the location-provider: 'geoclue', 'geoclue2', 'manual'
 ; type 'redshift -l list' to see possible values.
