--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,15 +1,10 @@
 # Tmux settings
 #
 # TODO: 
-#  - change 'highlighted' window border color - currently red, should be green
 #  - increase spacing between window names in bottom bar OR do something else to improve separation
 
 # enable mouse-mode so we can scroll, resize panes, etc
 set -g mouse on
-
-# Set different background color for active window
-set -g window-status-current-bg red
-set -g window-status-current-fg black
 
 # Set XTerm key bindings
 setw -g xterm-keys on
@@ -70,12 +65,13 @@ bind-key -n M-left prev
 
 # Smart pane switching with awareness of vim splits
 # Ctrl+hjkl = move around
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# TODO: fix this, it is incompatible with tmux 2.9+
+#is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+#bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+#bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+#bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+#bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+#bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Copy mode
 unbind [
@@ -98,8 +94,8 @@ unbind Down
 bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
 
 # Some useful shortcuts
-bind-key | split-window -h
-bind-key - split-window -v
+#bind-key | split-window -h
+#bind-key - split-window -v
 
 # Log output to a text file on demand
 bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
@@ -113,13 +109,17 @@ set-option -g allow-rename off
 
 ### COLORS ###
 
+# Set different background color for active window
+set-window-option -g window-status-current-style bg=red,fg=black
+
 # set pane colors - highlight the active pane
-set -g pane-border-fg colour245
-set -g pane-active-border-fg red
+set -g pane-border-style "fg=colour245"
+set -g pane-active-border-style "fg=red"
 
 # colorize messages in the command line
-set-option -g message-bg black 
-set-option -g message-fg brightred 
+set -g message-command-style "bg=black,fg=brightred"
+set -g message-style "bg=black,fg=brightred"
+set -g mode-style "bg=black,fg=brightred"
 
 # ----------------------
 # Status Bar
@@ -133,6 +133,4 @@ setw -g monitor-activity on
 set -g status-bg colour16
 set -g status-fg "#bebebe"
 
-# TODO: re-implement if needed/desired
-#source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
 
