--- a/xmonad/.xsessionrc
+++ b/xmonad/.xsessionrc
@@ -29,9 +29,10 @@ xsetroot -cursor_name left_ptr
 #sleep 4 && compton -CG --config=/dev/null --vsync --experimental-backends --blur-background --blur-background-frame --backend="glx" --blur-background-fixed --blur-kern="9,9,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1," &
 # 11x11box blur
 #sleep 4 && picom -CG --config=/dev/null --vsync --experimental-backends --blur-background --blur-background-frame --blur-background-fixed --blur-kern="11,11,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1," &
-
 # disabled for now because 1) it causes occasional flashes and 2) it causes parsec video stream to freeze and 3) if it is killed after it is started, conky_desktop_log is invisible
 #sleep 4 && picom -CG --vsync --experimental-backends --backend=glx &
+# re-enabled picom since vsync is really nice
+sleep 3 && picom --vsync --experimental-backends &
 
 
 # apply wallpaper+colorscheme combo
