update tmux config to use colemak-friendly move keys (hjkl)

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,21 +39,21 @@ setw -g pane-base-index 1
 # Use vim bindings
 setw -g mode-keys vi
 
-# Remap window navigation to vim
-unbind-key j
-bind-key j select-pane -D 
-unbind-key k
-bind-key k select-pane -U
+# Remap window navigation to vim (using colemak layout)
 unbind-key h
 bind-key h select-pane -L
-unbind-key l
-bind-key l select-pane -R
+unbind-key n
+bind-key n select-pane -D 
+unbind-key e
+bind-key e select-pane -U
+unbind-key i
+bind-key i select-pane -R
 bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+bind -r C-i select-window -t :+
 bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind -r N resize-pane -D 5
+bind -r E resize-pane -U 5
+bind -r I resize-pane -R 5
 bind N previous-window
 bind Left previous-window
 bind Right next-window
